--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notion-markdown-api",
   "version": "1.0.0",
   "dependencies": {
-    "@tryfabric/martian": "0.1.7",
+    "@tryfabric/martian": "^0.1.7",
     "express": "4.19.2"
   }
 }
